fix: modify some places to match th design draft modify the max-height of .info-title add text wrap in .middle p

--- a/Week1/week1.css
+++ b/Week1/week1.css
@@ -142,6 +142,7 @@ a {
   color: #ae0000;
   font-size: 40px;
   border-bottom: 3px solid #ae0000;
+  max-height: 60px;
 }
 
 .info-content {
